--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ header {
 }
 
 #projects {
-  background-image: url('https://img.freepik.com/free-vector/tiny-business-people-generating-ideas-holding-gears-big-light-bulb-idea-management-alternative-thinking-best-solution-choice-concept-illustration_335657-2555.jpg?t=st=1735933385~exp=1735936985~hmac=71e8acb4c2dbcddf63c7de1f63867864eae522b9f551eee9fc02443e48de175b&w=996');
+  background-image: url('https://img.freepik.com/premium-photo/dark-mode-mockup-with-blank-space-placing-your-design_1108314-507634.jpg');
 }
 
 #contact {
