--- a/style.css
+++ b/style.css
@@ -83,6 +83,51 @@ header {
   transform: scale(1.1);
 }
 
+/* Modal Styles */
+.modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8);
+  justify-content: center;
+    align-items: center;
+  z-index: 2000; /* Ensure it's above other elements */  
+}
+
+.modal-content {
+  background: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  max-width: 600px;
+  width: 90%;
+  text-align: center;
+  position: relative;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  animation: fadeIn 0.3s ease-in-out;
+}
+
+.modal-content img {
+  width: 100%;
+  border-radius: 8px;
+  margin-top: 15px;
+}
+
+.close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 24px;
+  font-weight: bold;
+  color: #333;
+  cursor: pointer;
+}
+
+.close:hover {
+  color: #d00;
+}
 
 /* Fade-in Animation */
 @keyframes fadeIn{
@@ -94,55 +139,5 @@ header {
     opacity: 1;
     transform: scale(1);
   }
-}
-
-
-
-/* Modal Styles */
-.modal {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.8);
-  justify-content: center;
-  text-align: center;
-  position: relative;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  animation: fadeIn 0.3s ease-in-out;
-}
-
-
-.modal-content {
-  background: #fff;
-  padding: 20px;
-  border-radius: 5px;
-  max-width: 600px;
-  width: 90%;
-  text-align: center;
-  color: #000;
-}
-
-.modal-content img {
-  width: 100%;
-  border-radius: 8px;
-  margin-top: 10px;
-}
-
-.close {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  font-size: 24px;
-  font-weight: bold;
-  color: #333;
-  cursor: pointer;
-
-}
-
-.close:hover {
-  color: #d00;
 }
 
